// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TopContentReport should render the TopContentReport component 1`] = `
<div>
  <section
    class="top-content-report svelte-126j0ji"
  >
    <article
      class="svelte-pntwh0"
    >
       
      <section
        class="widget-header svelte-1kld2ef"
      >
        <div
          class="title svelte-1kld2ef"
        >
          <h2
            class="svelte-1kld2ef"
          >
            Top content
          </h2>
           
           
        </div>
         
        <div
          class="actions svelte-1kld2ef"
        >
          <div
            slot="actions"
          >
            <div
              class="select top-content-report-sizes-select svelte-c7jdhd"
            >
              <span>
                Show
              </span>
               
              <div
                class="
    mdc-select
    smui-select
    
    
    smui-select--standard
    
    
  "
              >
                 
                <i
                  class="mdc-select__dropdown-icon"
                />
                 
                <input
                  id="SMUI-select-0"
                  type="hidden"
                  value="5"
                />
                 
                <div
                  aria-haspopup="listbox"
                  aria-labelledby="SMUI-select-0-smui-label SMUI-select-0-smui-selected-text"
                  aria-required="false"
                  class="mdc-select__selected-text"
                  id="SMUI-select-0-smui-selected-text"
                  role="button"
                  tabindex="0"
                >
                  5
                </div>
                 
                 
                 
                <div
                  class="
    mdc-line-ripple
    
    
  "
                />
                
                 
              </div>
            </div>
          </div>
        </div>
      </section>
       
      <section
        class="widget-body svelte-4p1s5s"
      >
        <div
          class="spinner-container svelte-wkqaim"
          style="--z-index: 10;"
        >
          <div
            class="spinner dot-0 svelte-wkqaim"
          />
          <div
            class="spinner dot-1 svelte-wkqaim"
          />
          <div
            class="spinner dot-2 svelte-wkqaim"
          />
        </div>
         
        
      </section>
    </article>
  </section>
</div>
`;

exports[`TopContentReport should retry getting report data when we get a timeout back 1`] = `
Array [
  Array [
    null,
    null,
    "5",
    Object {
      "from": "2020-11-01",
      "to": "2020-11-02",
    },
    null,
  ],
  Array [
    null,
    null,
    "5",
    Object {
      "from": "2020-11-01",
      "to": "2020-11-02",
    },
    null,
  ],
]
`;

exports[`TopContentReport should retry getting report data when we get a timeout back 2`] = `
<div>
  <section
    class="top-content-report svelte-126j0ji"
  >
    <article
      class="svelte-pntwh0"
    >
       
      <section
        class="widget-header svelte-1kld2ef"
      >
        <div
          class="title svelte-1kld2ef"
        >
          <h2
            class="svelte-1kld2ef"
          >
            Top content
          </h2>
           
           
        </div>
         
        <div
          class="actions svelte-1kld2ef"
        >
          <div
            slot="actions"
          >
            <div
              class="select top-content-report-sizes-select svelte-c7jdhd"
            >
              <span>
                Show
              </span>
               
              <div
                class="
    mdc-select
    smui-select
    
    
    smui-select--standard
    
    
  "
              >
                 
                <i
                  class="mdc-select__dropdown-icon"
                />
                 
                <input
                  id="SMUI-select-1"
                  type="hidden"
                  value="5"
                />
                 
                <div
                  aria-haspopup="listbox"
                  aria-labelledby="SMUI-select-1-smui-label SMUI-select-1-smui-selected-text"
                  aria-required="false"
                  class="mdc-select__selected-text"
                  id="SMUI-select-1-smui-selected-text"
                  role="button"
                  tabindex="0"
                >
                  5
                </div>
                 
                 
                 
                <div
                  class="
    mdc-line-ripple
    
    
  "
                />
                
                 
              </div>
            </div>
          </div>
        </div>
      </section>
       
      <section
        class="widget-body svelte-4p1s5s"
      >
        <div
          class="spinner-container svelte-wkqaim"
          style="--z-index: 10;"
        >
          <div
            class="spinner dot-0 svelte-wkqaim"
          />
          <div
            class="spinner dot-1 svelte-wkqaim"
          />
          <div
            class="spinner dot-2 svelte-wkqaim"
          />
        </div>
         
        
      </section>
    </article>
  </section>
</div>
`;
